# openai-realtimegpt

./: .env.example  .gitignore  MCP_SETUP_GUIDE.md  PROJECT_SUMMARY.md  readme.md  test-mcp-integration.sh
chroma_db_all_V2/: chroma.sqlite3
first-agent/: .env.example  BUILD_SUCCESS.md  GEMINI_FEATURES.md  GEMINI_INTEGRATION.md  HTTP_MCP_GUIDE.md  MCP_INTEGRATION.md  README.md  eslint.config.js  gemini_backend.py  mcp-proxy-server.js  package-lock.json  package.json  requirements.txt  test-mcp-direct.js  test-mcp.sh  vite.config.js
first-agent/public/: gemini-capture-processor.js
first-agent/src/: App.css  App.tsx  agent.ts  audioUtils.ts  debug.ts  geminiLive.ts  index.css  main.tsx  sessionHandler.ts  theme.tsx
first-agent/src/components/: ConnectionView.tsx  ConversationHistory.tsx  ConversationView.tsx  DebugPanel.tsx  Icons.tsx  ModelSelection.tsx  TestControls.tsx  ThemeToggle.tsx  WelcomePage.tsx
first-agent/src/mcp/: groundingClient.ts  httpEmailClient.ts  mcpServer.ts
first-agent/src/tools/: getCurrentTime.ts  index.ts
grounding-mcp/: README.md  grounding_search.py  pyproject.toml  setup_claude.sh
grounding-mcp/grounding_mcp/: server.py
mcp_rag_server/: .env.example  .gitignore  CLAUDE_DESKTOP_SETUP.md  FIX_INSTRUCTIONS.md  ISSUE_FIXED.md  README.md  SETUP_COMPLETE.md  SETUP_FIXED.md  claude_config_uv.json  claude_desktop_config_example.json  config.yaml  configure_claude_desktop.sh  fixed_claude_config.json  mcp_config_example.json  pyproject.toml  requirements.txt  server.py  setup.sh  start_server.sh  updated_claude_config.json
(+2 files in other folders)
