[project]
name = "m365-rag-agent"
version = "1.0.0"
description = "M365 RAG Agent MCP Server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp==1.0.0",
    "langchain",
    "langchain-google-genai",
    "langchain-community",
    "pyyaml",
    "python-dotenv",
    "pydantic>=2.0",
    "chromadb"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "server.py",
    "config.yaml",
    ".env*",
]
